<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/home"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/myaccount"
            android:icon="@drawable/user"
            android:title="@string/myaccount"/>
        <item
            android:id="@+id/location"
            android:icon="@drawable/maps"
            android:title="@string/set_location"/>
        <!--<item
            android:id="@+id/noty"
            android:icon="@drawable/noty"
            android:title="@string/noty"/>-->
        <!--<item
            android:id="@+id/oder_history"
            android:icon="@drawable/oders"
            android:title="@string/transaction"/>-->
       <item
            android:id="@+id/feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback"/>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"/>
    </group>

    <group android:id="@+id/nav_footer">
        <!--<item
            android:id="@+id/settings"
            android:icon="@drawable/setting"
            android:title="@string/setting"/>-->
        <item
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/help"/>
        <item
            android:id="@+id/ambassador"
            android:icon="@drawable/ambassador"
            android:title="@string/ambassador"/>
    </group>

</menu>
