<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorTransparent"
    android:paddingStart="30dp"
    android:paddingEnd="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_round_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/hinted_geomanist_book"
            android:text="@string/deleteconfirm"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorGreyDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:fontFamily="@font/hinted_geomanist_book"
                android:textSize="20sp"
                android:textColor="@color/colorLightBlue"
                android:text="@string/cancel"/>
            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/colorGreyDark"/>
            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:fontFamily="@font/hinted_geomanist_book"
                android:textSize="20sp"
                android:textColor="@color/colorLightBlue"
                android:text="@string/ok"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>

