<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".main.DashboardActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/colorPrimaryDark">
            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/back" />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard"
                android:textSize="20dp"
                android:layout_marginLeft="-40dp"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/hinted_geomanist_book"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_listing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_weight="0.5"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:text="@string/dashboard"
                    android:textSize="@dimen/fab_text_size"
                    android:textColor="@color/colorLightBlack"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="180sp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="Total count of listing posted"
                            android:textSize="@dimen/fab_text_size_smallest"
                            android:textColor="@color/colorLightBlack"/>
                        <TextView
                            android:id="@+id/tv_total_count"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginRight="30dp"
                            android:text="0"
                            android:textSize="@dimen/fab_text_size"
                            android:textColor="@color/colorBlack"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_height="0.5dp"
                        android:background="@color/colorLightBlack"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="180sp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="Total weight of food consumed"
                            android:textSize="@dimen/fab_text_size_smallest"
                            android:textColor="@color/colorLightBlack"/>
                        <TextView
                            android:id="@+id/tv_total_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginRight="30dp"
                            android:text="0"
                            android:textSize="@dimen/fab_text_size"
                            android:textColor="@color/colorBlack"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_height="0.5dp"
                        android:background="@color/colorLightBlack"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="180sp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:text="Total count of food consumed"
                            android:textSize="@dimen/fab_text_size_smallest"
                            android:textColor="@color/colorLightBlack"/>
                        <TextView
                            android:id="@+id/tv_total_consumed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:layout_marginRight="30dp"
                            android:text="0"
                            android:textSize="@dimen/fab_text_size"
                            android:textColor="@color/colorBlack"/>
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_height="0.5dp"
                        android:background="@color/colorLightBlack"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_htitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/dashHtext"
                    android:textSize="@dimen/fab_text_size_smaller"
                    android:textColor="@color/colorLightBlack"/>
                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:scrollbars="none">
                    <LinearLayout
                        android:id="@+id/Linear_scroll_hview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    </LinearLayout>
                </HorizontalScrollView>

                <TextView
                    android:id="@+id/tv_noHresult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/noresult"
                    android:visibility="gone"
                    android:textSize="@dimen/fab_text_size_small"
                    android:textColor="@color/colorLightBlack"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_remote_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:padding="0dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/Linear_scroll_vview"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/tv_vtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:text="@string/dashVtext"
                        android:textSize="@dimen/fab_text_size_smaller"
                        android:textColor="@color/colorLightBlack"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_noVresult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/noresult"
                    android:visibility="invisible"
                    android:textSize="@dimen/fab_text_size_small"
                    android:textColor="@color/colorLightBlack"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineScaleParty"
        app:indicator_color="#F53700" />
</FrameLayout>